--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
                             <li><a href="#">Portfolio</a></li>
                             <li><a href="#">Pricing</a></li>
                             <li><a href="#">Contact Us</a></li>
-                        </ul>
-                        <p class="credit pt-45">Template Designed and Developed by <a href="https://uideck.com/" rel="nofollow">UIdeck</a></p>
+                        </ul> <!-- 
+                        <p class="credit pt-45">Template Designed and Developed by <a href="https://uideck.com/" rel="nofollow">UIdeck</a></p> -->
                     </div> <!-- footer content -->
                 </div>
             </div>  <!-- row -->
