--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                             <li><a href="#">Pricing</a></li>
                             <li><a href="#">Contact Us</a></li>
                         </ul>
-                        <p class="credit pt-45">Template Designed and Developed by <a href="https://uideck.com/" rel="nofollow">UIdeck</a></p>
+                        <p class="credit pt-45">Rayhan Ahmed</p>
                     </div> <!-- footer content -->
                 </div>
             </div>  <!-- row -->
